<resources>
    <string name="app_name">Show Episode Generator</string>
    <string name="version">1.0</string>
    <string name="ep">"Episode: "</string>
    <string name="se">"Season: "</string>
    <string name="random">Random Episode</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="fav">Favourites</string>
    <string name="create">Add custom show</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="add">Add to favourites</string>
    <string name="add_new">Add a new show</string>
    <string name="title">Title</string>
    <string name="seasons">Seasons</string>
    <string name="added">New show was added</string>
    <string name="to_fav">Add also to favourites</string>
    <string name="delete">Delete show</string>
    <string name="edit">Edit show</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="dismiss">Dismiss</string>
    <string name="how_to_add">How to add a show</string>
    <string name="how_to_edit">How to edit a show</string>
    <string name="add_edit_message">Title field is a place for show\'s title, in seasons field you should type count of episodes per season. For example if a show has 2 seasons, and it has 22 episodes in first season and 24 in second you should write \'22,24\'. You always have to separate seasons by comma.</string>
    <string name="cannot_delete">You can only delete custom added shows</string>
    <string name="delete_done">You successfully deleted show</string>
    <string name="cannot_edit">You cannot edit this show</string>
    <string name="edit_done">You successfully edited this show</string>
    <string name="sort_a_z">Sort</string>
    <string name="show">Show</string>
    <string name="list">Show list</string>
    <string name="latest_show">Latest Show</string>
    <string name="show_appear">The show will appear here</string>
    <string name="no_show">You haven\'t selected any show yet</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="battery_theme">Battery saver theme</string>
    <string name="system_theme">Use system theme</string>
    <string name="natural_order">Shows sorted in natural order</string>
    <string name="natural_order_reversed">Shows sorted in reversed natural order</string>
    <string name="title_empty">Title field cannot be empty</string>
    <string name="season_empty">Seasons field cannot be empty</string>
    <string name="dates_empty">Aired dates field cannot be empty</string>
    <string name="all_empty">Title and seasons fields cannot be empty</string>
    <string name="theme_sett">Theme chooser</string>
    <string name="result_here">Result will appear here</string>
    <string name="fav_added">Show was added to favourites</string>
    <string name="fav_removed">Show was removed from favourites</string>
    <string name="air_date">When aired</string>
    <string name="about_text">This simple app allows you to generate random episode number of your favourite show.</string>
    <string name="github_page">Check out my github page!</string>
    <string name="email">Have any suggestions? Let me know!</string>
    <string name="github">Github</string>
    <string name="my_email">E-mail</string>
    <string name="made_by">Made with ❤️ by qxtno</string>
</resources>
