<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/list"
            />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite"
            android:title="@string/fav" />
        <item
            android:id="@+id/nav_add_show"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/create"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about"/>
        <item
            android:id="@+id/gen_show"
            android:title="@string/show"
            android:visible="false"/>
        <item
            android:id="@+id/edit_show"
            android:title="@string/edit"
            android:visible="false"/>
    </group>
</menu>