<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/seasons_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:digits="1234567890, "
        android:ems="10"
        android:hint="@string/seasons"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/aired_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:digits="1234567890-"
        android:ems="10"
        android:hint="@string/air_date"
        android:inputType="numberDecimal" />

    <CheckBox
        android:id="@+id/fav_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_fav" />

    <Button
        android:id="@+id/add_new_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new" />

</LinearLayout>