<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <RadioButton
            android:id="@+id/radio_auto_battery_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/battery_theme" />

        <RadioButton
            android:id="@+id/radio_system_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_theme" />

    </RadioGroup>

</RelativeLayout>