<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/activity_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textCapWords"
        android:text="" />

    <EditText
        android:id="@+id/activity_edit_seasons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:digits="01234567890, "
        android:ems="10"
        android:hint="@string/seasons"
        android:inputType="numberDecimal"
        android:text="" />

    <EditText
        android:id="@+id/activity_edit_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:digits="1234567890-"
        android:ems="10"
        android:hint="@string/air_date"
        android:inputType="numberDecimal"
        android:text=""/>

    <Button
        android:id="@+id/activity_edit_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>